--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.16.3",
     "ontology-ts-sdk": "^1.0.13",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "twit": "^2.2.11"
   },
   "keywords": [
     "ontology",
