--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "axios": "^0.18.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "ontology-ts-sdk": "^1.0.18",
-    "socket.io": "^2.2.0",
+    "ontology-ts-sdk": "1.0.18",
+    "socket.io": "^2.3.0",
     "twit": "^2.2.11"
   },
   "keywords": [
@@ -22,9 +22,9 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^5.16.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.20.2"
   },
   "scripts": {
     "test": "eslint ."
